navbar styling done

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.navbar-brand img {
+  width: 50px;
+}
+
 .nav-link {
   text-transform: uppercase;
   color: black;
@@ -18,7 +22,7 @@
   transform: translateX(-50%);
   width: 0;
   height: 2px;
-  background-color: black;
+  background-color: #0db3c7;
   transition: width 0.3s ease;
 }
 
@@ -38,14 +42,34 @@
 
 .navbarToggler {
   padding: 5px 10px;
+  padding-top: 0;
   background-color: transparent;
   border: none;
-  font-size: larger;
-  color: ;
+  border-radius: 5px;
+  font-size: 25px;
+  transition: all .5s;
+  color: #0db3c7;
+}
+
+.navbarToggler:hover {
+  background-color: rgba(13, 179, 199, 0.7);
+  color: white;
+}
+
+.navbarToggler {
+  display: none;
 }
 
 @media (max-width: 767px) {
   .navbar .container-fluid {
     padding: 0 30px;
+  }
+
+  .navbarToggler {
+    display: block;
+  }
+
+  .nav-link {
+    width: fit-content;
   }
 }
