--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,17 @@
   box-sizing: border-box;
 }
 
+/* navbar */
+.bg-noScroll .nav-link{
+  color: white;
+}
+
 .navbar-brand img {
   width: 50px;
 }
 
 .nav-link {
   text-transform: uppercase;
-  color: black;
   position: relative;
 }
 
@@ -58,6 +62,21 @@
 
 .navbarToggler {
   display: none;
+}
+
+.bg-scroll {
+  background-color: white;
+  color: white;
+  box-shadow: 1px 1px 10px 2px rgba(0,0,0,20%);
+}
+/* end Navbar */
+
+.homeDiv {
+  background-image: url("./assets/bannerImg2.svg");
+  background-repeat: no-repeat;
+  background-position: top right;
+  min-height: 100vh;
+  margin-top: -80px;
 }
 
 @media (max-width: 767px) {
